# theoretica-gui

./: CMakeLists.txt  README.md  gui.cpp  gui.h  main.cpp
